# Youtube_Video_RAG

./: .dockerignore  .gitignore  Dockerfile  Frontend.py  README.md  api.py  dep.txt  gemini_Test.py  main.py  pyproject.toml  requirements.txt  tes.ipynb  test.py
Ingestion/: context_chunking.py  ingestion_chain.py  yt_context_loader.py
Pipeline/: chat_memory.py  llm_response.py  query_chain.py  query_enhance.py
Retrieval/: cohere_reranker.py  retriever.py  vector_store.py
