[project]
name = "production-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "ipykernel>=7.3.0",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.7",
    "langchain-cohere>=0.5.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "langsmith>=0.8.5",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "streamlit>=1.58.0",
    "supadata>=1.6.0",
    "youtube-transcript-api>=1.2.4",
]
